# localflow

./: .gitignore  README.md
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/ui/: index.html  package-lock.json  package.json
apps/desktop/ui/src/: router.tsx  styles.css
apps/desktop/ui/src/lib/: api.ts
apps/server/: localflow.db  pyproject.toml
apps/server/.localflow_rag/: index.jsonl  index_meta.json  permissions.json
apps/server/localflow/: main.py
apps/server/localflow/api/: deps.py  router.py  schemas.py
apps/server/localflow/api/v1/: chat.py  conversations.py  drafts.py  executions.py  health.py  rag.py  schemas.py
apps/server/localflow/core/: config.py  logging.py  middleware.py  security.py
apps/server/localflow/domain/: enums.py  hashing.py
apps/server/localflow/llm/: gemini.py  ollama.py  prompt_manager.py  provider.py  schemas.py
apps/server/localflow/llm/prompt_packs/default/: mode_code.txt  mode_email.txt  mode_linkedin.txt  mode_routine.txt  repair.txt  system.txt
apps/server/localflow/rag/: service.py
apps/server/localflow/services/: approval_service.py  execution_service.py
apps/server/localflow/storage/: db.py  models.py
apps/server/localflow/tools/: __init__.py  browser_automation.py  browser_search.py  open_links.py  registry.py  search_web.py
apps/server/localflow_server.egg-info/: SOURCES.txt  requires.txt
apps/server/tests/: test_error_contract.py  test_execution_gate.py
(+2 files in other folders)
