[project]
name = "localflow-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "anyio>=4.0",
]

[tool.alembic]
script_location = "localflow/storage/migrations"